<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/C5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextStyle"
                            android:text="OrderId:" />

                        <TextView
                            android:id="@+id/ord_id"
                            style="@style/TextStyle"
                            android:textSize="@dimen/C14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextStyle"
                            android:text="Date :" />

                        <TextView
                            android:id="@+id/dis_date"
                            style="@style/TextStyle"
                            android:textSize="@dimen/C14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/access_code"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/accessCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="4YRUXLSRO20O8NIH"
                        android:visibility="gone">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/merchant_id" />

                    <EditText
                        android:id="@+id/merchantId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/C5dp"
                        android:background="@drawable/round_white_backround"
                        android:elevation="@dimen/C2dp"
                        android:enabled="false"
                        android:gravity="start"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text="2"
                        android:textSize="13dp" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="Order Id" />

                    <EditText
                        android:id="@+id/orderId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/C5dp"
                        android:background="@drawable/round_white_backround"
                        android:elevation="@dimen/C2dp"
                        android:enabled="false"
                        android:gravity="start"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/currency"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:text="INR"
                        android:visibility="gone" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/amount" />

                    <EditText
                        android:id="@+id/idEdtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/C5dp"
                        android:background="@drawable/round_white_backround"
                        android:elevation="@dimen/C2dp"
                        android:gravity="start"
                        android:hint="Enter amount"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text="1.00"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/redirect_url"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/redirectUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textUri"
                        android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/cancel_url"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/cancelUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textUri"
                        android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/rsa_url"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/rsaUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textUri"
                        android:text="https://secure.ccavenue.com/transaction/jsp/GetRSA.jsp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/nextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/C50dp"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/button_color_theme"
                        android:onClick="onClick"
                        android:text="@string/pay_button"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>