<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <include layout="@layout/custom_toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/C10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextStyle"
                    android:text="Name:" />

                <TextView
                    android:id="@+id/dis_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/C14dp"
                    style="@style/TextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextStyle"
                    android:text="Address:" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/C14dp"
                    android:id="@+id/dis_place"
                    style="@style/TextStyle" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lin_pri_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="PrimaryOrder"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/prim"></ImageView>

                <TextView
                    style="@style/TextViewHeader"
                    android:text="@string/pri_orders" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_sec_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="SecondaryOrder"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/primary"></ImageView>

                <TextView
                    style="@style/TextViewHeader"
                    android:text="@string/sec_orders" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/lin_counter_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="CounterOrder"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/counter" />

                <TextView
                    style="@style/TextViewHeader"
                    android:text="@string/counter_orders" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_my_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="MyOrder"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/myoder" />

                <TextView
                    style="@style/TextViewHeader"
                    android:text="@string/my_orders" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lin_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="ReportData"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/report" />

                <TextView
                    style="@style/TextViewHeader"
                    android:text="@string/Rep_orders" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/C10dp"
                android:visibility="invisible"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:elevation="2dp"
                android:onClick="Payment"
                android:orientation="vertical"
                android:padding="@dimen/C20dp">

                <ImageView
                    style="@style/ImageViewHeader"
                    android:src="@drawable/report" />

                <TextView
                    style="@style/TextViewHeader"
                    android:text="Payment" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

